fix missing sphinx dependency and jinja2 version conflicts

--- a/source/primer/docs/_static/environment.yaml
+++ b/source/primer/docs/_static/environment.yaml
@@ -8,9 +8,11 @@ dependencies:
   - sphinx-tabs
   - sphinx-copybutton
   - sphinxcontrib
+  - sphinxcontrib-contentui
   - sphinx-panels
   - nbsphinx
   - sphinx-gallery
   - ipython
   - jupyter
   - bump2version
+  - Jinja2<3.1
